r61 - june, 2, 2009
    * AclCredentialPeer : doSelectForMembreId() method
    * Membre.php : resetAcl() method and addCredential($code) method
    * AclCredentialPeer : doDeleteForMembreId() method
    * schema.yml : acl_credential got a new "acl_action_id" field
    * symfony propel:build-model
    * Membre : new template aclError.php which is displayed if no Member is
      specified for edit
    * AclActionPeer : retrieveByCode($code) method
    * AclCredential : getCode() method
    * AclCredentialForm.class.php : new automaticCheck() method
    * no_mail.png image
    * Membre : index > icon 'no_mail' is displayed without link if user has no
      email address
    * security.yml files have been added in each module
    * myUser.class.php : setCredentials() method
    

r60 - june, 1, 2009
    * Association : mailing > error is displayed if the user doesn't have the
      smtp module
    * MembrePeer : doSelectWithEmailForAssociation() > fixed issue with
      Criteria::ISNOTNULL
    * schema.yml : model is up to date to manage credentials
    * symfony propel:build-model
    * fixtures.yml : filled with ACL modules and actions
    * AclActionPeer : doSelectForModuleId() new method
    * AclCredentialForm : new class
    * Membre : aclSuccess.php > new file
    * Membre : new action "acl"
    

r59 - june, 1, 2009
    * Association/Credentials action has moved to "Error" module
    * Association : credentialsError.php template has moved to "Error" module
    * All references to 'association/credentials' action has been changed into
      'error/credentials'
    * Activite : showSuccess.php > new column to display the Compte and Time
      icons got an ALT attribute
    * Compte : showSuccess.php > enhanced appearance
    * Association : mailing > try/catch Connection Exception if the message
      can't be sent
    * Association : mailingSuccess.php > html_entity_decode() is used to display
      contents correctly
    

r58 - may, 21, 2009